# password_complexity

./: CONFIG_PATH.yaml  Dockerfile  MANIFEST.in  Makefile  README.md  docker-compose.yaml  pyproject.toml  setup.cfg  setup.py
models/: model_config.joblib
notebooks/: password_model.ipynb  test_model.ipynb
password_complexity/: __init__.py
password_complexity/app/: app.py  test_app.ipynb  test_app.py
password_complexity/app/templates/: index.html
password_complexity/features/: __init__.py  generate.py
password_complexity/metrics/: metrics.py
password_complexity/models/: base.py  sklearn_models.py
password_complexity/pipelines/: predict_model.py  test_pipelines.ipynb  train_model.py
password_complexity/utils/: config.py  hyperparameters.py  logger.py  pipeline_structure.py
